Jot down some TODOs

--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
 
 <p>Use the Web Console (Ctrl+Shift+K) to poke at the <code>RIL</code> object
 and see inspect debugging output</p>
+<!-- TODO we have chrome privs, so can't we juts do that programmatically? -->
 
 <script type="application/javascript;version=1.8" src="socket.js"></script>
 <script type="application/javascript;version=1.8" src="ril_vars.js"></script>
