--- a/test.html
+++ b/test.html
@@ -12,8 +12,8 @@
 
 <p id="status"></p>
 
-<p>Use the Web Console (Ctrl+Shift+K) to poke at the <code>RIL</code> object
-and see inspect debugging output</p>
+<p>Use the Web Console (Ctrl+Shift+K) to poke at the <code>RIL</code> and
+<code>Phone</code> objects and see inspect debugging output</p>
 <!-- TODO we have chrome privs, so can't we juts do that programmatically? -->
 
 <script type="application/javascript;version=1.8" src="socket.js"></script>
